fix(wdfMeetingRequirementsAlignment): Move asc-icon align into utils and add to eligibility icon image

--- a/src/assets/scss/modules/_utils.scss
+++ b/src/assets/scss/modules/_utils.scss
@@ -97,3 +97,8 @@
 .asc-font-19 {
   @include govuk-font($size: 19);
 }
+
+.asc-icon-align {
+  position: relative;
+  top: 4px;
+}
